--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -42,6 +42,21 @@
         <div class="col-xs-9">
           <p class="lead">{{title}}</p>
           <p>{{text}}</p>
+          {{#if hasPhone}}
+            <p><i class="fa fa-phone" aria-hidden="true"></i> {{phone}}</p>
+          {{/if}}
+          {{#if hasEmail}}
+            <p><i class="fa fa-at" aria-hidden="true"></i> {{email}}</p>
+          {{/if}}
+          {{#if hasHours}}
+            <p><i class="fa fa-clock-o" aria-hidden="true"></i> {{hours}}</p>
+          {{/if}}
+          {{#if hasCost}}
+            <p><i class="fa fa-money" aria-hidden="true"></i> {{cost}}</p>
+          {{/if}}
+          {{#if hasAccessibility}}
+            <p><i class="fa fa-wheelchair-alt" aria-hidden="true"></i> {{accessibility}}</p>
+          {{/if}}
         </div><!-- col-xs-9 -->
       </div><!-- row -->
       {{> tileButtons}}
