Just cleaning up

--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -24,7 +24,7 @@
 
     {{#if tileTypeIframe}}
       <div class="embed-responsive embed-responsive-16by9">
-        {{{iframeHtml}}}
+        {{{iframe}}}
       </div>
       <p>{{text}}</p>
       {{> tileButtons}}
