Added embeds fields

--- a/client/templates/tiles/tile_edit.html
+++ b/client/templates/tiles/tile_edit.html
@@ -15,6 +15,10 @@
     {{> tileEditIframe}}
   {{/if}}
 
+  {{#if tileTypeEmbed}}
+    {{> tileEditEmbed}}
+  {{/if}}
+
   {{#if tileTypePointOfInterest}}
     {{> tileEditPointOfInterest}}
   {{/if}}
