--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -30,6 +30,14 @@
       {{> tileButtons}}
     {{/if}}
 
+    {{#if tileTypeEmbed}}
+      <div class="embed-responsive embed-responsive-16by9">
+        {{{embed}}}
+      </div>
+      <p>{{text}}</p>
+      {{> tileButtons}}
+    {{/if}}
+
     {{#if tileTypePointOfInterest}}
       <div class="row">
         <div class="col-xs-3">
