--- a/client/templates/tiles/tile_menu.html
+++ b/client/templates/tiles/tile_menu.html
@@ -5,6 +5,7 @@
       <a class="btn btn-primary" id="tileTypeImage"><i class="fa fa-camera-retro" aria-hidden="true"></i> Image</a>
       <!-- <a class="btn btn-primary" id="tileTypeVideo"><i class="fa fa-video-camera" aria-hidden="true"></i> Video</a> -->
       <a class="btn btn-primary" id="tileTypeIframe"><i class="fa fa-code" aria-hidden="true"></i> iframe</a>
+      <a class="btn btn-primary" id="tileTypeEmbed"><i class="fa fa-code" aria-hidden="true"></i> embed</a>
       <a class="btn btn-primary" id="tileTypePointOfInterest"><i class="fa fa-binoculars" aria-hidden="true"></i> Point of interest</a>
 
       {{#if isTileType 'text'}}
@@ -21,6 +22,10 @@
 
       {{#if isTileType 'iframe'}}
         {{> tileSubmitIframe}}
+      {{/if}}
+
+      {{#if isTileType 'embed'}}
+        {{> tileSubmitEmbed}}
       {{/if}}
 
       {{#if isTileType 'pointOfInterest'}}
