--- a/client/templates/tiles/embed/tile_edit_embed.html
+++ b/client/templates/tiles/embed/tile_edit_embed.html
@@ -5,7 +5,7 @@
         <label class="control-label" for="embed">Embed</label>
         <div class="controls">
           <label><i class="fa fa-code"></i> Embed code</label>
-          <textarea name="embed" id="embed" class="form-control" rows="2" value="{{embed}}"></textarea>
+          <textarea name="embed" id="embed" class="form-control" rows="2" value="{{embed}}" placeholder="Paste embed code here. Supports any iframe. Supports Twitter and Instagram embed codes."></textarea>
           <span class="help-block">{{errorMessage 'embed'}}</span>
           <label>Description</label>
           <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your embed..." value="{{text}}"></textarea>
