--- a/client/templates/tiles/embed/tile_submit_embed.html
+++ b/client/templates/tiles/embed/tile_submit_embed.html
@@ -4,7 +4,7 @@
     <div class="form-group {{errorClass 'embed'}}">
         <div class="controls">
             <label><i class="fa fa-code"></i> Embed code</label>
-            <textarea name="embed" id="embed" class="form-control" rows="2" placeholder="Paste embed code here..."></textarea>
+            <textarea name="embed" id="embed" class="form-control" rows="2" placeholder="Paste embed code here. Supports any iframe. Supports Twitter and Instagram embed codes."></textarea>
             <span class="help-block">{{errorMessage 'embed'}}</span>
             <label>Description</label>
             <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your embed..." value="{{text}}"></textarea>
