--- a/client/templates/stories/story_edit.html
+++ b/client/templates/stories/story_edit.html
@@ -28,4 +28,6 @@
     </div><!-- #items -->
 
   </div>
+  <script async src="https://platform.instagram.com/en_US/embeds.js"></script>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </template>
