--- a/client/templates/tiles/tile_menu.html
+++ b/client/templates/tiles/tile_menu.html
@@ -6,6 +6,7 @@
       <!-- <a class="btn btn-primary" id="tileTypeVideo"><i class="fa fa-video-camera" aria-hidden="true"></i> Video</a> -->
       <a class="btn btn-primary" id="tileTypeEmbed"><i class="fa fa-code" aria-hidden="true"></i> embed</a>
       <a class="btn btn-primary" id="tileTypePointOfInterest"><i class="fa fa-binoculars" aria-hidden="true"></i> Point of interest</a>
+      <a class="btn btn-primary" id="tileTypeLink"><i class="fa fa-link" aria-hidden="true"></i> Link</a>
 
       {{#if isTileType 'text'}}
         {{> tileSubmitText}}
@@ -25,6 +26,10 @@
 
       {{#if isTileType 'pointOfInterest'}}
         {{> tileSubmitPointOfInterest}}
+      {{/if}}
+
+      {{#if isTileType 'link'}}
+        {{> tileSubmitLink}}
       {{/if}}
 
     </div><!-- popup-menu -->
