link submission working with URL

--- a/client/templates/tiles/link/tile_edit_link.html
+++ b/client/templates/tiles/link/tile_edit_link.html
@@ -5,7 +5,7 @@
         <label class="control-label" for="title">Link</label>
         <div class="controls">
           <label><i class="fa fa-link" aria-hidden="true"></i> Link URL</label>
-          <input name="link" id="link" class="form-control" value="{{link}}" />
+          <input name="link" id="link" class="form-control" value="{{url}}" />
           <span class="help-block">{{errorMessage 'link'}}</span>
           {{> tileAdvancedOptionsEdit}}
         </div>
