--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -62,6 +62,11 @@
       {{> tileButtons}}
     {{/if}}
 
+    {{#if tileTypeLink}}
+      <p>{{url}}</p>
+      {{> tileButtons}}
+    {{/if}}
+
 
   </div><!-- tile-text -->
 </template>
