--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -63,7 +63,7 @@
     {{/if}}
 
     {{#if tileTypeLink}}
-      <p>{{url}}</p>
+      <h2 class="lead link"><a href="{{url}}" target="_blank"><i class="fa fa-link"></i> {{text}} <small><i class="fa fa-external-link"></i></small></a></h2>
       {{> tileButtons}}
     {{/if}}
 
