Touching up embeds

--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -23,10 +23,10 @@
     {{/if}}
 
     {{#if tileTypeEmbed}}
-      <div class="embed-responsive embed-responsive-16by9">
+      <div class="tile-embed">
         {{{embed}}}
       </div>
-      <p>{{text}}</p>
+      <p class="center">{{text}}</p>
       {{> tileButtons}}
     {{/if}}
 
