--- a/client/templates/stories/story_item.html
+++ b/client/templates/stories/story_item.html
@@ -1,5 +1,5 @@
 <template name="storyItem">
   <div class="story">
-    <h3><a href="{{pathFor 'storyPage'}}">{{title}}</a> <small><a href="{{pathFor 'storyEdit'}}">Edit Story</a></small></h3>
+    <h3><a href="{{pathFor 'storyPage'}}">{{title}}</a> <small><a href="{{pathFor 'storyEdit'}}"><i class="fa fa-pencil"></i></a></small></h3>
   </div>
 </template>
