--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -1,7 +1,7 @@
 <template name="storyPage">
 {{> storyControls}}
   <div id="fullpage">
-    <div class="section">
+    <div class="section" data-percentage="80" data-centered="true">
       <div class="story-header">
         <h1>{{title}}<br><small>by {{author}}</small></h1>
       </div><!-- story-header -->
