added api instructions

--- a/client/templates/user/user-settings.html
+++ b/client/templates/user/user-settings.html
@@ -3,5 +3,8 @@
     <h1>{{currentUser.username}}</h1>
     <hr>
     {{> apiKey }}
+    <p><strong>Endpoints:</strong></p>
+    <small>GET story:<br><code>https://go.orbitist.com/api/v1/story?api_key=<em>yourapikey</em>&story=<em>storyid</em></code></small><br>
+    <small>GET tiles:<br><code>https://go.orbitist.com/api/v1/tiles?api_key=<em>yourapikey</em>&story=<em>storyid</em></code></small>
   </div>
 </template>
