Adding the story id to story settings

--- a/client/templates/stories/story_settings.html
+++ b/client/templates/stories/story_settings.html
@@ -2,6 +2,7 @@
     <div class="page">
     <form>
       <div class="form-group {{errorClass 'title'}}">
+        <small>Story ID: <code>{{_id}}</code></small><br>
         <label class="control-label" for="title">Title</label>
         <div class="controls">
             <input name="title" id="title" type="text" value="{{title}}" placeholder="Name your story" class="form-control"/>
