--- a/client/templates/tiles/image/tile_submit_image.html
+++ b/client/templates/tiles/image/tile_submit_image.html
@@ -6,6 +6,7 @@
           {{> uploading}}
         {{/if}}
         <div class="controls">
+          <label>Image</label>
             <div class="imageUploadThumb"></div>
             <input type="file" name="image" id="image" class="form-control" accept="image/*" value="">
             <span class="help-block">{{errorMessage 'image'}}</span>
