--- a/client/templates/tiles/text/tile_edit_text.html
+++ b/client/templates/tiles/text/tile_edit_text.html
@@ -4,6 +4,7 @@
       <div class="form-group {{errorClass 'text'}}">
         <label class="control-label" for="title">Text</label>
         <div class="controls">
+          <label>Text</label>
           <textarea name="text" id="text" class="form-control" rows="5" value="{{text}}"></textarea>
           <span class="help-block">{{errorMessage 'text'}}</span>
           {{> tileAdvancedOptionsEdit}}
