--- a/client/templates/tiles/text/tile_submit_text.html
+++ b/client/templates/tiles/text/tile_submit_text.html
@@ -3,6 +3,7 @@
   <form name="tile" class="tile-form form">
     <div class="form-group {{errorClass 'text'}}">
         <div class="controls">
+          <label>Text</label>
             <textarea name="text" id="text" class="form-control" rows="5" placeholder="Tell a story..."></textarea>
             <span class="help-block">{{errorMessage 'text'}}</span>
             {{> tileAdvancedOptions}}
