turns out it's an array!

--- a/client/templates/tiles/slideshow/tile_submit_slideshow.html
+++ b/client/templates/tiles/slideshow/tile_submit_slideshow.html
@@ -1,7 +1,7 @@
 <template name="tileSubmitSlideshow">
   <hr>
   <form name="tile" class="tile-form form">
-    <div class="form-group {{errorClass 'image'}}">
+    <div class="form-group {{errorClass 'slideshow'}}">
         {{#if uploadingSlideshow 'true'}}
           {{> uploading}}
         {{/if}}
