--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -34,12 +34,16 @@
 
     {{#if tileTypeSlideshow}}
       {{#each slideshow}}
+
         {{#if hasSlide}}
+        <div class="slide">
           <img class="img-responsive" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{id}}"/>
+          {{#if hasCaption}}
+            <p>{{caption}}</p>
+          {{/if}}
+        </div>
         {{/if}}
-        {{#if hasCaption}}
-          <p>{{caption}}</p>
-        {{/if}}
+
       {{/each}}
       {{> tileButtons}}
     {{/if}}
