Editing still needs work for image related tile types

--- a/client/templates/tiles/tile_edit.html
+++ b/client/templates/tiles/tile_edit.html
@@ -11,6 +11,10 @@
     {{> tileEditVideo}}
   {{/if}}
 
+  {{#if tileTypeSlideshow}}
+    {{> tileEditSlideshow}}
+  {{/if}}
+
   {{#if tileTypeEmbed}}
     {{> tileEditEmbed}}
   {{/if}}
