--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -39,7 +39,7 @@
         <div class="slide">
           <img class="img-responsive" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{id}}"/>
           {{#if hasCaption}}
-            <p>{{caption}}</p>
+            <p class="caption">{{caption}}</p>
           {{/if}}
         </div>
         {{/if}}
