--- a/client/templates/stories/story_edit.html
+++ b/client/templates/stories/story_edit.html
@@ -17,13 +17,7 @@
 
     <div id="tile-items">
       {{#each tiles}}
-        <div class="tile-item">
-          <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-              {{> tileItem}}
-            </div>
-          </div>
-        </div><!-- tileItem -->
+        {{> tileItemEdit}}
       {{/each}}
     </div><!-- #items -->
 
