--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -14,6 +14,9 @@
     </div><!-- section -->
     {{/each}}
   </div><!-- fullpage -->
+  {{#if isStoryMap 'true'}}
+    {{> storyMap}}
+  {{/if}}
   <script async src="https://platform.instagram.com/en_US/embeds.js"></script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </template>
