--- a/client/templates/tiles/tile_buttons.html
+++ b/client/templates/tiles/tile_buttons.html
@@ -1,10 +1,10 @@
 <template name="tileButtons">
-  {{#if isStoryEditPage}}
-  {{#if ownTile}}
-  {{#if latitude}}
-  <small><a class="btn btn-xs btn-default" target="_blank" href="https://www.google.com/maps/@{{latitude}},{{longitude}},15z"><i class="fa fa-globe" aria-hidden="true"></i></a></small>
-  {{/if}}
-  <small><a class="btn btn-xs btn-default" href="{{pathFor 'tileEdit'}}"><i class="fa fa-pencil" aria-hidden="true"></i></a></small>
-  {{/if}}
-  {{/if}}
+  <div class="tile-buttons">
+    {{#if ownTile}}
+    {{#if latitude}}
+    <small><a class="btn btn-xs btn-default" target="_blank" href="https://www.google.com/maps/@{{latitude}},{{longitude}},15z"><i class="fa fa-globe" aria-hidden="true"></i></a></small>
+    {{/if}}
+    <small><a class="btn btn-xs btn-default" href="{{pathFor 'tileEdit'}}"><i class="fa fa-pencil" aria-hidden="true"></i></a></small>
+    {{/if}}
+  </div>
 </template>
