--- a/client/templates/stories/story_controls.html
+++ b/client/templates/stories/story_controls.html
@@ -1,11 +1,7 @@
 <template name="storyControls">
   <div class="story-controls">
-    {{#if isStoryPage}}
-      <a class="btn btn-success" id="map-activate" href="#"><i class="fa fa-map-o"></i> Map</a>
-    {{/if}}
-    {{#if isStoryMapPage}}
-      <a class="btn btn-success" href="{{pathFor 'storyPage'}}"><i class="fa fa-list"></i> Story</a>
-    {{/if}}
+    <a class="btn btn-success" id="map-activate" href="#"><i class="fa fa-map-o"></i> Map</a>
+    <a class="btn btn-success" id="map-inactive" href="#"><i class="fa fa-list"></i> Story</a>
     {{#if currentUser}}
     {{#if ownStory}}
       <a href="{{pathFor 'storyEdit'}}" class="btn btn-success"><i class="fa fa-pencil" aria-hidden="true"></i> Edit</a>
