--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -57,13 +57,6 @@
     {{#if tileTypePointOfInterest}}
     <div class="tile-point-of-interest">
       <div class="row">
-        <div class="col-xs-3">
-          {{#if hasImage}}
-            <img class="img-responsive img-circle" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/>
-          {{else}}
-            <img class="img-responsive img-circle" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/q16hdfjxnpvepkrqnvyg"/>
-          {{/if}}
-        </div><!-- col-xs-3 -->
         <div class="col-xs-9">
           <p class="lead">{{title}}</p>
           <p>{{text}}</p>
@@ -83,6 +76,13 @@
             <p><i class="fa fa-wheelchair-alt" aria-hidden="true"></i> {{accessibility}}</p>
           {{/if}}
         </div><!-- col-xs-9 -->
+        <div class="col-xs-3">
+          {{#if hasImage}}
+            <img class="img-responsive img-rounded" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/>
+          {{else}}
+            <img class="img-responsive img-rounded" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/q16hdfjxnpvepkrqnvyg"/>
+          {{/if}}
+        </div><!-- col-xs-3 -->
       </div><!-- row -->
     </div>
     {{/if}}
