thrashing with the overflow scrolling

--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -9,7 +9,7 @@
 
     {{#if tileTypeImage}}
     <div class="tile-image">
-      <img  src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/>
+      <img class="img-responsive" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/>
       {{#if hasText}}
         <p>{{text}}</p>
       {{/if}}
