--- a/client/templates/tiles/image/tile_edit_image.html
+++ b/client/templates/tiles/image/tile_edit_image.html
@@ -10,6 +10,9 @@
               <div class="imageUploadThumb"><img class="img-responsive" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/></div>
               <input type="file" name="image" id="image" class="form-control" accept="image/*" value="">
               <span class="help-block">{{errorMessage 'image'}}</span>
+              <label>Image Title</label>
+              <input name="title" id="title" type="text" value="{{title}}" placeholder="Title of this image..." class="form-control"/>
+              <label>Image Caption</label>
               <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your image..." value="{{text}}"></textarea>
               {{> tileAdvancedOptionsEdit}}
           </div>
