--- a/client/stylesheets/tiles.css
+++ b/client/stylesheets/tiles.css
@@ -1,10 +1,13 @@
+.tile-item {
+}
+
 .tile {
   width: 100%;
+  height: 100%;
   border-radius: 3px;
   padding: 0px;
   margin: 0px auto;
   background-color: white;
-  overflow-y: hidden;
 }
 
 #tile-items {
