--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -2,7 +2,7 @@
 {{> storyControls}}
 
   <div id="fullpage">
-    <div class="section" data-percentage="80" data-centered="true">
+    <div class="section">
       <div class="story-header">
         <h1>{{title}}<br><small>by {{author}}</small></h1>
       </div><!-- story-header -->
