--- a/client/stylesheets/tile_image.css
+++ b/client/stylesheets/tile_image.css
@@ -3,7 +3,7 @@
   overflow: scroll;
 }
 
-.tile-image p {
+.image-caption {
   position: absolute;
   bottom: 10px;
   left: 20px;
@@ -13,4 +13,5 @@
   border-radius: 20px;
   max-width: 300px;
   font-size: 14px;
+  z-index: 2;
 }
