--- a/client/stylesheets/hero.css
+++ b/client/stylesheets/hero.css
@@ -4,5 +4,7 @@
   width: 100vw;
   height: 100vh;
   background-size: cover;
-  background-position: center center;
+  background-position: 50% 50%;
+  transition: all 0.1s linear;
+  -webkit-transition: all 0.1s linear;
 }
