--- a/client/templates/tiles/tile_edit.html
+++ b/client/templates/tiles/tile_edit.html
@@ -1,4 +1,5 @@
 <template name="tileEdit">
+
   {{#if tileTypeText}}
     {{> tileEditText}}
   {{/if}}
@@ -26,5 +27,7 @@
   {{#if tileTypeLink}}
     {{> tileEditLink}}
   {{/if}}
+
+  <p style="position:fixed;top:0px;left:50px;"><a class="btn btn-success btn-xs" href="{{pathFor 'storyEdit' _id=this.storyId}}"><span class="fa fa-arrow-left"></span> Back to story</a></p>
 
 </template>
